loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:2: error: not found: value p
while (p!=10) {avance();avance();avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance();gauche(); p = p + 1;} 
       ^LoopCourse:2: error: not found: value p
while (p!=10) {avance();avance();avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance();gauche();avance();avance();avance();avance();avance();avance();avance();avance();gauche(); p = p + 1;} 
                                                                                                                                                                                                                                                                                                                                                    ^